# cli

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  compile.txt  install.sh  main.py  pyproject.toml  release
.github/: CONTRIBUTING.md
.github/assets/templates/: agent.yml  dashboard.yml
.github/workflows/: github.yml  notification.yml  python.yml  release-candidate.yml  release.yml  templates-upload.yml
aa/: .env  databases.json  docker-compose.yml
cc/: .env  databases.json  docker-compose.yml
commands/: agent.py  common.py  config.py  dashboard.py  db.py
core/: config.py  docker.py  network.py  updater.py  utils.py
dd/: .env  docker-compose.yml
templates/: compose.py
test-agent/: .env  databases.json  docker-compose.yml
