[project]
name = "portabase-cli"
version = "26.07.1"
description = "The official command line interface (CLI) for managing and deploying Portabase instances with ease."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.20.0",
    "pyinstaller>=6.17.0",
    "requests>=2.32.5",
    "pyyaml >=6.0.0",
    "questionary>=2.1.0",
    "pyyaml>=6.0.3"
]
